<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="pinpinbox_2_0_0_tab_home">首頁</string>
    <string name="pinpinbox_2_0_0_tab_me">個人專區</string>
    <string name="pinpinbox_2_0_0_tab_notify">通知</string>
    <string name="pinpinbox_2_0_0_tab_menu">選單</string>
    <string name="pinpinbox_2_0_0_time_before_year_single">年前</string>
    <string name="pinpinbox_2_0_0_time_before_month_single">個月前</string>
    <string name="pinpinbox_2_0_0_time_before_day_single">天前</string>
    <string name="pinpinbox_2_0_0_time_before_hour_single">小時前</string>
    <string name="pinpinbox_2_0_0_time_before_minute_single">分鐘前</string>
    <string name="pinpinbox_2_0_0_time_before_year">年前</string>
    <string name="pinpinbox_2_0_0_time_before_month">個月前</string>
    <string name="pinpinbox_2_0_0_time_before_day">天前</string>
    <string name="pinpinbox_2_0_0_time_before_hour">小時前</string>
    <string name="pinpinbox_2_0_0_time_before_minute">分鐘前</string>
    <string name="pinpinbox_2_0_0_time_before_just_now">剛剛...</string>
    <string name="pinpinbox_2_0_0_time_day">天</string>
    <string name="pinpinbox_2_0_0_time_hour">時</string>
    <string name="pinpinbox_2_0_0_time_min">分</string>
    <string name="pinpinbox_2_0_0_time_expired">過期</string>
    <string name="pinpinbox_2_0_0_notify_type_album_notice">作品通知</string>
    <string name="pinpinbox_2_0_0_notify_type_user_interactive_notice">創作人互動</string>
    <string name="pinpinbox_2_0_0_notify_type_cooperation_notice">共用邀請</string>
    <string name="pinpinbox_2_0_0_notify_type_system_notice">系統發佈</string>
    <string name="pinpinbox_2_0_0_no_template">搜尋不到版型</string>
    <string name="pinpinbox_2_0_0_no_template_own">還沒有版型可以用</string>
    <string name="pinpinbox_2_0_0_button_upload">上傳</string>
    <string name="pinpinbox_2_0_0_button_read_album">觀看內容</string>
    <string name="pinpinbox_2_0_0_button_start_upload">開始上傳</string>
    <string name="pinpinbox_2_0_0_button_send">送出</string>
    <string name="pinpinbox_2_0_0_button_done">完成</string>
    <string name="pinpinbox_2_0_0_button_clear">清除</string>
    <string name="pinpinbox_2_0_0_button_ok">好的</string>
    <string name="pinpinbox_2_0_0_button_skip">略過</string>
    <string name="pinpinbox_2_0_0_button_next">下一步</string>
    <string name="pinpinbox_2_0_0_button_scan_search">使用掃描搜尋</string>
    <string name="pinpinbox_2_0_0_button_actopen">當前隱私權為開啟</string>
    <string name="pinpinbox_2_0_0_button_actclose">當前隱私權為關閉</string>
    <string name="pinpinbox_2_0_0_button_follow">關注</string>
    <string name="pinpinbox_2_0_0_button_follow_cancel">取消關注</string>
    <string name="pinpinbox_2_0_0_button_exit">離開</string>
    <string name="pinpinbox_2_0_0_button_collect">收藏</string>
    <string name="pinpinbox_2_0_0_button_sponsor">贊助</string>
    <string name="pinpinbox_2_0_0_button_edit_album">作品編輯器</string>
    <string name="pinpinbox_2_0_0_button_save_and_exit">保存並離開</string>
    <string name="pinpinbox_2_0_0_button_sponsor_more">贊助更多</string>
    <string name="pinpinbox_2_0_0_button_album_management">作品管理</string>
    <string name="pinpinbox_2_0_0_button_back_to_login">返回登入</string>
    <string name="pinpinbox_2_0_0_button_back_to_register">返回註冊</string>
    <string name="pinpinbox_2_0_0_button_crop">剪裁</string>
    <string name="pinpinbox_2_0_0_button_event_link">活動連結</string>
    <string name="pinpinbox_2_0_0_button_new">最新</string>
    <string name="pinpinbox_2_0_0_button_category">探索</string>
    <string name="pinpinbox_2_0_0_button_profile_edit">資訊編輯</string>
    <string name="pinpinbox_2_0_0_button_register_done">完成註冊</string>
    <string name="pinpinbox_2_0_0_button_facebook_login">Facebook\n登入</string>
    <string name="pinpinbox_2_0_0_button_create_account">建立帳號</string>
    <string name="pinpinbox_2_0_0_button_login">登入</string>
    <string name="pinpinbox_2_0_0_button_about">關於</string>
    <string name="pinpinbox_2_0_0_button_about_us">關於我們</string>
    <string name="pinpinbox_2_0_0_button_examination">檢查</string>
    <string name="pinpinbox_2_0_0_button_privacy">隱私權</string>
    <string name="pinpinbox_2_0_0_button_edit">編輯</string>
    <string name="pinpinbox_2_0_0_button_invite">邀請</string>
    <string name="pinpinbox_2_0_0_button_invited">已邀請</string>
    <string name="pinpinbox_2_0_0_button_share">分享</string>
    <string name="pinpinbox_2_0_0_button_delete">刪除</string>
    <string name="pinpinbox_2_0_0_button_download">下載</string>
    <string name="pinpinbox_2_0_0_button_admin">管理</string>
    <string name="pinpinbox_2_0_0_button_approver">副管理</string>
    <string name="pinpinbox_2_0_0_button_cooperation">共用</string>
    <string name="pinpinbox_2_0_0_button_browser">瀏覽</string>
    <string name="pinpinbox_2_0_0_button_save_to_close">保存關閉</string>
    <string name="pinpinbox_2_0_0_button_uploaded">已上傳:</string>
    <string name="pinpinbox_2_0_0_button_uploading">上傳中..請稍候</string>
    <string name="pinpinbox_2_0_0_button_save">保存</string>
    <string name="pinpinbox_2_0_0_button_buy">確定購買</string>
    <string name="pinpinbox_2_0_0_button_preview">預覽</string>
    <string name="pinpinbox_2_0_0_button_logout">登出</string>
    <string name="pinpinbox_2_0_0_button_add_description">新增本頁描述</string>
    <string name="pinpinbox_2_0_0_button_modify_description">修改描述</string>
    <string name="pinpinbox_2_0_0_button_stop">停止</string>
    <string name="pinpinbox_2_0_0_button_replace">撤下</string>
    <string name="pinpinbox_2_0_0_button_re_select">重新選擇</string>
    <string name="pinpinbox_2_0_0_button_submit">投稿</string>
    <string name="pinpinbox_2_0_0_button_change">變更</string>
    <string name="pinpinbox_2_0_0_button_all">全部</string>
    <string name="pinpinbox_2_0_0_button_message">留言</string>
    <string name="pinpinbox_2_0_0_button_create_new_album">建立新作品</string>
    <string name="pinpinbox_2_0_0_button_contribute_or_cancel">投稿/撤下</string>
    <string name="pinpinbox_2_0_0_button_voting_for_this_work">投票給此作品</string>
    <string name="pinpinbox_2_0_0_button_exchange_now">立即兌換</string>
    <string name="pinpinbox_2_0_0_button_eventexchange">我要兌換</string>
    <string name="pinpinbox_2_0_0_button_more">更多</string>
    <string name="pinpinbox_2_0_0_button_refresh_video">重新讀取影片</string>
    <string name="pinpinbox_2_0_0_button_learn_now">立即了解</string>
    <string name="pinpinbox_2_0_0_button_scan_sign_up">邀請碼註冊</string>
    <string name="pinpinbox_2_0_0_button_select_file">選擇檔案</string>
    <string name="pinpinbox_2_0_0_button_select">選擇</string>
    <string name="pinpinbox_2_0_0_button_send_text">傳送</string>
    <string name="pinpinbox_2_0_0_button_more_album_for_user">更多他/她的作品</string>
    <string name="pinpinbox_2_0_0_button_collected">已收藏</string>
    <string name="pinpinbox_2_0_0_event_info">活動詳情</string>
    <string name="pinpinbox_2_0_0_event_contributors">立即投稿</string>
    <string name="pinpinbox_2_0_0_pop_check">確定</string>
    <string name="pinpinbox_2_0_0_pop_save">保存</string>
    <string name="pinpinbox_2_0_0_pop_go_to_google_play">前往GooglePlay</string>
    <string name="pinpinbox_2_0_0_pop_title_birthday">你的生日是?</string>
    <string name="pinpinbox_2_0_0_pop_title_do_what">你想做什麼?</string>
    <string name="pinpinbox_2_0_0_pop_title_create_album_type">為作品新增項目</string>
    <string name="pinpinbox_2_0_0_pop_title_set_album_preview">設定預覽頁</string>
    <string name="pinpinbox_2_0_0_pop_title_album_set">作品設定</string>
    <string name="pinpinbox_2_0_0_pop_title_long_click_to_drag">相片長按可拖曳更換順序</string>
    <string name="pinpinbox_2_0_0_pop_title_board">留言版</string>
    <string name="pinpinbox_2_0_0_pop_title_send_contribute_way">請選擇投稿方式</string>
    <string name="pinpinbox_2_0_0_pop_title_select_audio_type">選擇一種播放模式</string>
    <string name="pinpinbox_2_0_0_pop_title_change_identify">變更權限</string>
    <string name="pinpinbox_2_0_0_pop_title_where_to_go">要前往哪裡?</string>
    <string name="pinpinbox_2_0_0_pop_title_choose_share_way">選擇分享方式</string>
    <string name="pinpinbox_2_0_0_pop_title_what_to_report">要檢舉什麼項目?</string>
    <string name="pinpinbox_2_0_0_pop_title_choose_country_number">選擇國碼</string>
    <string name="pinpinbox_2_0_0_pop_title_choose_category">選擇分類</string>
    <string name="pinpinbox_2_0_0_pop_title_choose_size">請選擇上傳尺寸</string>
    <string name="pinpinbox_2_0_0_pop_title_upload_audio_file">上傳音訊檔</string>
    <string name="pinpinbox_2_0_0_dialog_try_again">再試一次</string>
    <string name="pinpinbox_2_0_0_dialog_offline_read">離線瀏覽\n作品</string>
    <string name="pinpinbox_2_0_0_dialog_check">確定</string>
    <string name="pinpinbox_2_0_0_dialog_close">關閉</string>
    <string name="pinpinbox_2_0_0_dialog_close_view">關閉視窗</string>
    <string name="pinpinbox_2_0_0_dialog_cancel">取消</string>
    <string name="pinpinbox_2_0_0_dialog_ok">好的</string>
    <string name="pinpinbox_2_0_0_dialog_setting">設定</string>
    <string name="pinpinbox_2_0_0_dialog_go_buy_point">前往購點</string>
    <string name="pinpinbox_2_0_0_dialog_be_later">稍後再說</string>
    <string name="pinpinbox_2_0_0_dialog_close_pinpinbox">關閉app</string>
    <string name="pinpinbox_2_0_0_dialog_i_know">我知道了</string>
    <string name="pinpinbox_2_0_0_dialog_confirm_to_change_audio_mode">確定切換</string>
    <string name="pinpinbox_2_0_0_dialog_exit_last_schedule">退出\n先前進度</string>
    <string name="pinpinbox_2_0_0_dialog_to_login">前往登入</string>
    <string name="pinpinbox_2_0_0_dialog_continue_edit">繼續編輯</string>
    <string name="pinpinbox_2_0_0_dialog_immediate_exit">直接離開</string>
    <string name="pinpinbox_2_0_0_dialog_to_cooperation_manage">前往\n共用管理</string>
    <string name="pinpinbox_2_0_0_dialog_yes">好</string>
    <string name="pinpinbox_2_0_0_dialog_no_need">不需要</string>
    <string name="pinpinbox_2_0_0_dialog_filters">特效</string>
    <string name="pinpinbox_2_0_0_dialog_subscribe">我要訂閱</string>
    <string name="pinpinbox_2_0_0_dialog_no_subscribe">暫時不用</string>
    <string name="pinpinbox_2_0_0_dialog_message_unknow">很抱歉，發生不明錯誤</string>
    <string name="pinpinbox_2_0_0_dialog_message_send_error_message">此問題已發送至pinpinbox團隊，本團隊將盡力搶修</string>
    <string name="pinpinbox_2_0_0_dialog_message_deficiency_identity_viewer">目前權限為"瀏覽者"，要前往我的收藏嗎?(想做內容編輯可以通知作者更改一下你的權限)</string>
    <string name="pinpinbox_2_0_0_size_general">一般尺寸</string>
    <string name="pinpinbox_2_0_0_size_original">原始尺寸(上傳時間較長)</string>
    <string name="pinpinbox_2_0_0_itemtype_no_audio">無音樂</string>
    <string name="pinpinbox_2_0_0_itemtype_plural_audio">多首播放</string>
    <string name="pinpinbox_2_0_0_itemtype_singular_audio">單首播放</string>
    <string name="pinpinbox_2_0_0_itemtype_create_new_album">建立新作品</string>
    <string name="pinpinbox_2_0_0_itemtype_select_exist_album">選擇現有作品</string>
    <string name="pinpinbox_2_0_0_itemtype_reward_share">獎勵分享(facebook)</string>
    <string name="pinpinbox_2_0_0_itemtype_common_share">一般分享</string>
    <string name="pinpinbox_2_0_0_itemtype_collect_my">我的作品</string>
    <string name="pinpinbox_2_0_0_itemtype_collect_cooperation">群組作品</string>
    <string name="pinpinbox_2_0_0_itemtype_recording">錄音</string>
    <string name="pinpinbox_2_0_0_itemtype_select_file">選擇檔案</string>
    <string name="pinpinbox_2_0_0_title_change_phone_number">變更號碼</string>
    <string name="pinpinbox_2_0_0_input_hint_phone_number">行動裝置號碼</string>
    <string name="pinpinbox_2_0_0_input_hint_input_verification_code">輸入驗證碼</string>
    <string name="pinpinbox_2_0_0_other_text_current_phone_number">當前號碼:</string>
    <string name="pinpinbox_2_0_0_other_text_to_change_to">要變更為</string>
    <string name="pinpinbox_2_0_0_other_text_wait_verification_code_description">請等候驗證碼寄送至您輸入的行動裝置，若時間過長，可回前步驟重新獲取驗證碼</string>
    <string name="pinpinbox_2_0_0_other_text_remove_all_audio_setting">(移除所有音檔設定)</string>
    <string name="pinpinbox_2_0_0_other_text_use_page_of_audio">(使用每頁的錄音或音效)</string>
    <string name="pinpinbox_2_0_0_other_text_play_only_one_audio_in_works">(作品內唯一播放)</string>
</resources>