<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/ppb200_title_pop_second"
        android:layout_marginBottom="@dimen/ppb200_padding_margin_first"
        android:layout_marginLeft="@dimen/ppb200_padding_margin_first"
        android:layout_marginRight="@dimen/ppb200_padding_margin_first"
        android:text="@string/pinpinbox_2_0_0_pop_title_choose_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/ppb200_padding_margin_first"
        android:paddingTop="@dimen/ppb200_padding_margin_first">


        <TextView

            android:id="@+id/tvGeneral"
            style="@style/ppb200_pop_item"
            android:paddingLeft="@dimen/ppb200_padding_margin_first"
            android:text="@string/pinpinbox_2_0_0_size_general" />

        <TextView
            android:id="@+id/tvOriginal"
            style="@style/ppb200_pop_item"
            android:paddingLeft="@dimen/ppb200_padding_margin_first"
            android:text="@string/pinpinbox_2_0_0_size_original" />

    </LinearLayout>


</LinearLayout>