<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <TextView
        android:id="@+id/tvTitle"
        style="@style/ppb200_title_pop_second"
        android:text="@string/pinpinbox_2_0_0_pop_title_send_contribute_way"
        android:layout_marginLeft="@dimen/ppb200_padding_margin_first"
        android:layout_marginBottom="@dimen/ppb200_padding_margin_first"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/tvCreate"
            style="@style/ppb200_pop_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ppb200_common_list_item_height"
            android:background="@drawable/click_2_0_0_list_item"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/ppb200_padding_margin_first"
            android:text="@string/pinpinbox_2_0_0_itemtype_create_new_album" />

        <TextView
            android:id="@+id/tvSelect"
            style="@style/ppb200_pop_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ppb200_common_list_item_height"
            android:background="@drawable/click_2_0_0_list_item"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/ppb200_padding_margin_first"
            android:text="@string/pinpinbox_2_0_0_itemtype_select_exist_album" />

    </LinearLayout>


</LinearLayout>