<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linBackground">



    <TextView
        android:id="@+id/tvTitle"
        style="@style/ppb200_title_pop_second"
        android:text="@string/pinpinbox_2_0_0_pop_title_choose_share_way"
        android:layout_marginLeft="@dimen/ppb200_padding_margin_first"
        android:layout_marginRight="@dimen/ppb200_padding_margin_first"
        android:layout_marginBottom="@dimen/ppb200_padding_margin_first"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/ppb200_padding_margin_first"
        android:paddingTop="@dimen/ppb200_padding_margin_first"
        android:background="@color/white">


    <TextView
        android:id="@+id/tvShareFB"
        style="@style/ppb200_pop_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ppb200_common_list_item_height"
        android:background="@drawable/click_2_0_0_list_item"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/ppb200_padding_margin_first"
        android:text="@string/pinpinbox_2_0_0_itemtype_reward_share"
        />

    <TextView
        android:id="@+id/tvShare"
        style="@style/ppb200_pop_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ppb200_common_list_item_height"
        android:background="@drawable/click_2_0_0_list_item"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/ppb200_padding_margin_first"
        android:text="@string/pinpinbox_2_0_0_itemtype_common_share" />

</LinearLayout>


</LinearLayout>